<resources>
    <string name="app_name">Chat App</string>
    <string name="user_profile">User Profile</string>
    <string name="chat_text_adapter" />
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_in_short">Sign in r</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="se_connecter">Log in</string>
    <string name="s_inscrire">Sign up</string>
    <string name="se_connecter_par_email">Login in with email</string>
    <string name="s_inscrire_par_email">Sign up with email</string>
    <string name="pas_encore_inscrit"> <u>Not Registered?</u> </string>
    <string name="username_connected">Username</string>
    <string name="choose_pic_text">Select a photo</string>
    <string name="no_pics_text">Skip this step</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="web_client_id" translatable="false">859618026888-98mt718g22e8l8gv328gqs897vv2bqmm.apps.googleusercontent.com</string>
    <string name="username_register">Username</string>
    <string name="params">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="username_user_profile"> </string>
    <string name="username">Username</string>
    <string name="last_message_adapter">Last Message....</string>
    <string name="edit_text_hint_chat">Type your message</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="friends">Friends</string>
    <string name="avatar_choice">Select your profile image</string>
    <string name="apply">Apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>